Modifiche allo slot parking

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href=""/>
     <script src=""></script>
-    <title>Lastminute.com Exercise</title>
+    <title>Exercise | Lastminute.com</title>
 </head>
 
 <body>
@@ -18,24 +18,67 @@
         </div>
 
         <div class="parking-slots">
+            <form>
+                <div class="parking-slots-single">
+                    <input type="radio" name="parkingslots" id="parkingslots-123" value="123"/><label for="parkingslots-123" >P2</label>
+                    <div class="parking-slots-single-info">
 
+                        "indoor": false,
+                        "insurance": false,
+                        "price": "13.56 EUR"
+
+
+                    </div>
+                </div>
+
+                <div class="parking-slots-single">
+                    <input type="radio" name="parkingslots" id="parkingslots-456" value="456"/><label for="parkingslots-456" >P3</label>
+                    <div class="parking-slots-single-info">
+
+                        "indoor": false,
+                        "insurance": true,
+                        "price": "18.99 EUR"
+
+                    </div>
+                </div>
+
+                <div class="parking-slots-single">
+                    <input type="radio" name="parkingslots" id="parkingslots-243" value="243"/><label for="parkingslots-243" >P4</label>
+                    <div class="parking-slots-single-info">
+
+                        "indoor": true,
+                        "insurance": true,
+                        "price": "23.56 EUR
+
+                    </div>
+                </div>
+
+                <div class="parking-slots-single">
+                    <input type="radio" name="parkingslots" id="parkingslots-700" value="700"/><label for="parkingslots-700" >P5</label>
+                    <div class="parking-slots-single-info">
+
+                        "indoor": true,
+                        "insurance": false,
+                        "price": "16.49 EUR"
+
+                    </div>
+                </div>
+
+                <button>Scegli il parcheggio</button>
+            </form>
         </div>
 
         <div class="parking-vendor">
             <ul>
-                <li><a href="">P2</a></li>
-                <li><a href="">P3</a></li>
-                <li><a href="">P4</a></li>
-                <li><a href="">P5</a></li>
+                <li>Parcheggio ParkinGo della tipologia selezionata</li>
+                <li>Navetta da/per aeroporto 24h</li>
+                <li>Vigilanza e custodia del mezzo 24h</li>
+                <li>Ripristino gratuito del calo di batteria della tua auto</li>
             </ul>
         </div>
 
-        <div class="parking-vendor">
-
-        </div>
-
         <div class="parking-opener">
-            <a href=""><span>I dettagli</span></a>
+            <a href=""><span>Chiudi i dettagli</span></a>
         </div>
         
 
