--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
     <link rel="stylesheet" href="asset/css/style.css"/>
     <link rel="stylesheet" href="asset/css/parking.css"/>
-    <script src=""></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="asset/js/script.js" type="text/javascript"></script>
+
     <title>Exercise | Lastminute.com</title>
 </head>
 
 <body>
     
     <div class="page">
-        
+
         <section class="parking">
 
             <h1 class="parking__header">Prenota il tuo parcheggio a Milano malpensa</h1>
@@ -22,6 +25,10 @@
                 <form>
                     <div class="parking__slot">
                         <label for="parkingslots-123" >
+
+                        <span class="b-circle"><span></span></span>
+
+
                         <input type="radio" name="parkingslots" id="parkingslots-123" value="123"/>
                         <p class="parking__slotname">P2</p>
                         <p class="parking__price"><strong>13.56 EUR</strong></p>  
